completed phrase queries as well

--- a/assignment 1/src/tokenization.ipynb
+++ b/assignment 1/src/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenize(df, nlp, allow_digits = False, allow_punct = False, allow_stopwords = False, allow_numbers = False):\n",
-    "    df[\"tokenized\"] = df[\"text\"].apply(lambda x: \" \".join([token.text for token in nlp(x) if (token.is_alpha or allow_digits) and (not token.is_punct or allow_punct) and (not token.is_stop or allow_stopwords) and (not token.like_num or allow_numbers)]))"
+    "    df[\"tokenized\"] = df[\"text\"].apply(lambda x: \" \".join([token.lemma_.lower() for token in nlp(x) if (token.is_alpha or allow_digits) and (not token.is_punct or allow_punct) and (not token.is_stop or allow_stopwords) and (not token.like_num or allow_numbers)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
