completed rough functionality

--- a/assignment 1/src/tokenization.ipynb
+++ b/assignment 1/src/tokenization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,21 +65,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def seperate_df_into_paragraphs(df):\n",
+    "def seperate_df_into_paragraphs(df, threshold = 20):\n",
     "    \"\"\"\n",
     "    Seperate the dataframe into paragraphs.\n",
     "    \"\"\"\n",
     "    main_df = pd.DataFrame(columns=[\"document_name\", \"page_number\", \"paragraph_number\", \"text\"])\n",
     "    for index, row in df.iterrows():\n",
     "        text = row[\"text\"].split(\"\\n \\n\")\n",
+    "        text = (\" \".join(text)).split(\".\\n\")\n",
     "        # remove empty strings\n",
     "        text = [paragraph for paragraph in text if paragraph != \"\"]\n",
     "        # if only spaces, remove\n",
     "        text = [paragraph for paragraph in text if paragraph != \" \"]\n",
+    "        # if the length of the paragraph is less than threshold, remove\n",
+    "        text = [paragraph for paragraph in text if len(paragraph) > threshold]\n",
     "        for paragraph_number, paragraph in enumerate(text):\n",
     "            df = pd.DataFrame(columns=[\"document_name\", \"page_number\", \"paragraph_number\", \"text\"])\n",
     "            df[\"document_name\"] = [row[\"document_name\"]]\n",
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
