small fix in ignoring and queries for phrase

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inverted_list, perm_index, rev_perm_index, n_word_index, corpus, main_df = startup_engine()"
+    "inverted_list, perm_index, rev_perm_index, n_word_index, _, main_df = startup_engine()"
    ]
   },
   {
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "search(\"membership requirement\", inverted_list, perm_index, rev_perm_index, n_word_index, main_df, corpus, ranked=True, is_phrase=True)"
+    "search(\"membership requirement\", inverted_list, perm_index, rev_perm_index, n_word_index, main_df, ranked=True, is_phrase=True)"
    ]
   }
  ],
