added wildcard matching in phrase query as well

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -32,53 +32,8 @@
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
       "Document Name: 5105072011_booklet\n",
-      "Page Number: 69\n",
-      "Score: 19.452933566312847\n",
-      "Paragraph Number: 1\n",
-      "Paragraph Text: SAMPLE DOCUMENT\n",
-      "65  b. that \n",
-      "the \n",
-      "medical \n",
-      "expenses \n",
-      "were \n",
-      "reasonable or necessary or otherwise \n",
-      "covered under SECTION II.  6. \n",
-      "Severability of Insurance  This insurance applies separately to each \n",
-      "insured, however, this condition will not \n",
-      "increase our limit of liability for any one \n",
-      "occurrence.   \n",
-      "This severability of insurance provision in no \n",
-      "way alters or affects any provision of the policy \n",
-      "indicating that it applies to “any insured”. Any \n",
-      "limiting or exclusionary provision in the policy \n",
-      "indicating that it applies to “any insured” \n",
-      "means that such limiting or exclusionary \n",
-      "provision is applicable as to any insured under \n",
-      "this policy. Where we use the phrase “any \n",
-      "insured”, we intend that such provisions not be \n",
-      "limited to any one insured and that such \n",
-      "provisions are applicable to any insured under \n",
-      "the policy.  7. \n",
-      "Suits Against Us  We may not be sued until all terms of this \n",
-      "policy have been fully compiled with. In \n",
-      "addition, under COVERAGE E, legal action \n",
-      "may not be brought against us until the \n",
-      "obligation to pay, by any insured, is finally \n",
-      "determined either by:  a. judgment against the insured after actual \n",
-      "trial; or  b. written agreement of the insured, the \n",
-      "claimant and us.  No one has the right to bring us into a suit to \n",
-      "determine the liability of any insured.   \n",
-      "SECTION III – GENERAL PROVISIONS  AAA MEMBERSHIP REQUIREMENT  A valid membership in the American Automobile \n",
-      "Association (AAA) or its divisions or affiliates is \n",
-      "required as a prerequisite to obtaining and renewing \n",
-      "this policy. \n",
-      "\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "Document Name: 5105072011_booklet\n",
       "Page Number: 3\n",
-      "Score: 17.20083277045352\n",
+      "Score: 8.60041638522676\n",
       "Paragraph Number: 1\n",
       "Paragraph Text: SAMPLE DOCUMENT TABLE OF CONTENTS  AGREEMENT \n",
       "1  DEFINITIONS \n",
@@ -137,13 +92,65 @@
       "\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------\n",
+      "Document Name: 5105072011_booklet\n",
+      "Page Number: 69\n",
+      "Score: 8.60041638522676\n",
+      "Paragraph Number: 1\n",
+      "Paragraph Text: SAMPLE DOCUMENT\n",
+      "65  b. that \n",
+      "the \n",
+      "medical \n",
+      "expenses \n",
+      "were \n",
+      "reasonable or necessary or otherwise \n",
+      "covered under SECTION II.  6. \n",
+      "Severability of Insurance  This insurance applies separately to each \n",
+      "insured, however, this condition will not \n",
+      "increase our limit of liability for any one \n",
+      "occurrence.   \n",
+      "This severability of insurance provision in no \n",
+      "way alters or affects any provision of the policy \n",
+      "indicating that it applies to “any insured”. Any \n",
+      "limiting or exclusionary provision in the policy \n",
+      "indicating that it applies to “any insured” \n",
+      "means that such limiting or exclusionary \n",
+      "provision is applicable as to any insured under \n",
+      "this policy. Where we use the phrase “any \n",
+      "insured”, we intend that such provisions not be \n",
+      "limited to any one insured and that such \n",
+      "provisions are applicable to any insured under \n",
+      "the policy.  7. \n",
+      "Suits Against Us  We may not be sued until all terms of this \n",
+      "policy have been fully compiled with. In \n",
+      "addition, under COVERAGE E, legal action \n",
+      "may not be brought against us until the \n",
+      "obligation to pay, by any insured, is finally \n",
+      "determined either by:  a. judgment against the insured after actual \n",
+      "trial; or  b. written agreement of the insured, the \n",
+      "claimant and us.  No one has the right to bring us into a suit to \n",
+      "determine the liability of any insured.   \n",
+      "SECTION III – GENERAL PROVISIONS  AAA MEMBERSHIP REQUIREMENT  A valid membership in the American Automobile \n",
+      "Association (AAA) or its divisions or affiliates is \n",
+      "required as a prerequisite to obtaining and renewing \n",
+      "this policy. \n",
+      "\n",
+      "------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "search(\"membership requirement\", inverted_list, perm_index, rev_perm_index, n_word_index, main_df, ranked=True, is_phrase=True)"
+    "search(\"mem* requirement\", inverted_list, perm_index, rev_perm_index, n_word_index, main_df, ranked=True, is_phrase=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
