gave a better example for experiment

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
       "Rank: 1\n",
       "Document Name: complete-property-owner-policy-wording-policies-incepting-or-renewing-from-010418-acom686-11\n",
       "Page Number: 64\n",
-      "Score: 249.99300270965446\n",
+      "Score: 186.84986990713892\n",
       "Paragraph Number: 2\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
@@ -58,7 +58,7 @@
       "Rank: 2\n",
       "Document Name: BRIT-PO-Policy-Wording-May-2016-1\n",
       "Page Number: 53\n",
-      "Score: 249.6848437395529\n",
+      "Score: 186.54171093703735\n",
       "Paragraph Number: 1\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
@@ -68,21 +68,9 @@
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
       "Rank: 3\n",
-      "Document Name: rsa_property_owners_policy_wording\n",
-      "Page Number: 40\n",
-      "Score: 249.09886963194285\n",
-      "Paragraph Number: 1\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "Paragraph Text: \n",
-      "40 | Properties Policysection 5 Data protectionWhat\tis\tcoveredWhat\tis\tnot\tcovered1  The defence of any Legal proceedings brought against You for compensation under Section 13 of the Data Protection Act 1998 provided that You are already registered with the Data Protection Commissioner2 An appeal by You againstA) the refusal of Your application for registration by the Data Protection CommissionerB) the refusal of an application for alteration of registered particulars by the Data Protection CommissionerC) an enforcement noticeD) a de-registration noticeE) a transfer prohibition noticeprovided that You agree to appoint our Administrator’s approved consultant as Your Appointed representative in accordance with Requirement 4 A) i) 1  Any amount in excess of the Limit of indemnity for Any one Claim shown in the schedule 2 Legal expenses arising from or relating toA) any criminal prosecutionB) any legal action concerning the grant and/or execution of a warrant of entryC) any claim where You do not appoint our Administrator’s \n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "------------------------------------------------------------------------------------------\n",
-      "Rank: 4\n",
       "Document Name: complete-property-owner-policy-wording-policies-incepting-or-renewing-from-010418-acom686-11\n",
       "Page Number: 63\n",
-      "Score: 247.13056285506002\n",
+      "Score: 183.98743005254448\n",
       "Paragraph Number: 2\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
@@ -91,10 +79,10 @@
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
-      "Rank: 5\n",
+      "Rank: 4\n",
       "Document Name: eSols Property Owners Commercial Policy Wording 2018 Policies which incepted before 01 July\n",
       "Page Number: 25\n",
-      "Score: 246.29691899816396\n",
+      "Score: 183.15378619564842\n",
       "Paragraph Number: 3\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
@@ -102,12 +90,24 @@
       "organisations for the benefit of any Employee. (4) Your first aid, fire, security and ambulance services. (5) Your participation in exhibitions. (6) private work by any Employee, with Your prior consent, for You or for any director, partner or Employee. (4) Data Protection Act 1998 We will indemnify The Insured in respect of: (1) legal fees and defence costs (2) legal liability for Compensation to an individual (a) the subject of personal data The Insured holds and (b) who suffers damage or distress caused by (i) inaccuracy of data (ii) loss of the data (iii) unauthorised destruction or disclosure of the data (iv) unauthorised access to the data arising from proceedings brought against The Insured under Section 13 of the Data Protection Act 1998. The maximum We will pay for all claims happening during any one Period of Insurance is £1,000,000. We will not provide indemnity in respect of any agreement for or including the performance of work outside The Defined Territories.    (14) any liability of whatsoever nature arising out of mining, \n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------\n",
+      "Rank: 5\n",
+      "Document Name: rsa_property_owners_policy_wording\n",
+      "Page Number: 40\n",
+      "Score: 182.8777064238\n",
+      "Paragraph Number: 1\n",
+      "------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------\n",
+      "Paragraph Text: \n",
+      "40 | Properties Policysection 5 Data protectionWhat\tis\tcoveredWhat\tis\tnot\tcovered1  The defence of any Legal proceedings brought against You for compensation under Section 13 of the Data Protection Act 1998 provided that You are already registered with the Data Protection Commissioner2 An appeal by You againstA) the refusal of Your application for registration by the Data Protection CommissionerB) the refusal of an application for alteration of registered particulars by the Data Protection CommissionerC) an enforcement noticeD) a de-registration noticeE) a transfer prohibition noticeprovided that You agree to appoint our Administrator’s approved consultant as Your Appointed representative in accordance with Requirement 4 A) i) 1  Any amount in excess of the Limit of indemnity for Any one Claim shown in the schedule 2 Legal expenses arising from or relating toA) any criminal prosecutionB) any legal action concerning the grant and/or execution of a warrant of entryC) any claim where You do not appoint our Administrator’s \n",
+      "------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "user_search(\"dat* protec* officer\", is_phrase=True, num_docs=5)"
+    "user_search(\"dat* protec*ion officer\", is_phrase=True, num_docs=5)"
    ]
   },
   {
