improved spell check by giving importance to swap

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "No documents found with direct match with dat* prtoection officer. Performing spell check...\n",
+      "Corrected Query: dat* protection officer\n",
       "Documents Retrieved: 5\n",
       "------------------------------------------------------------------------------------------\n",
       "------------------------------------------------------------------------------------------\n",
@@ -107,7 +109,7 @@
     }
    ],
    "source": [
-    "user_search(\"dat* protection officer\", is_phrase=True, num_docs=5, spell_check=True)"
+    "user_search(\"dat* prtoection officer\", is_phrase=True, num_docs=5, spell_check=True)"
    ]
   },
   {
