made autocomplete better with inflections

--- a/src/experiment.ipynb
+++ b/src/experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def user_search(query, ranked=True, is_phrase=False, summarize=False, num_docs=None, spell_check=False, autocomplete=False, n_auto_results=5):\n",
-    "    \"\"\"Simpler function to call the search function without passing in the indexes\n",
+    "    \"\"\"Simpler function to call the engine's search function without passing in the indexes\n",
     "    \"\"\"\n",
     "    return search(query, inverted_list, perm_index, rev_perm_index, n_word_index, main_df, ranked=ranked, is_phrase=is_phrase, show_summary=summarize, retrieve_n = num_docs, spell_check=spell_check, autocomplete=autocomplete, n_auto_results=n_auto_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,16 +42,16 @@
      "text": [
       "Possible Options:\n",
       "------------------------------------------------------------------------------------------\n",
-      "1. data la\n",
-      "2. data lar\n",
-      "3. data law\n",
-      "4. data lay\n",
-      "5. data lack\n",
-      "6. data lake\n",
-      "7. data lamp\n",
-      "8. data land\n",
-      "9. data last\n",
-      "10. data late\n",
+      "1. data laws\n",
+      "2. data law\n",
+      "3. data lay\n",
+      "4. data lays\n",
+      "5. data laid\n",
+      "6. data laying\n",
+      "7. data lack\n",
+      "8. data lacked\n",
+      "9. data lacking\n",
+      "10. data lacks\n",
       "------------------------------------------------------------------------------------------\n"
      ]
     }
